# ssb-sgis

./: .cookiecutter.json  .cruft.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .sonar-project.properties  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.md  examples.md  future-0.18.3-py3-none-any.whl  network_analysis_demo_template.md  network_analysis_examples.md  network_analysis_examples2.md  noxfile.py  pyproject.toml  pyproject.toml.rej  pytest-report.xml  restructuredtext_lint-1.4.0-py3-none-any.whl  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: constraints.txt  constraints.txt.rej  docs.yml  labeler.yml  release.yml  release.yml.rej  tests.yml  tests.yml.rej
docs/: conf.py  docstring_outputs.py  index.md  network_analysis_demo_template.md  network_analysis_demo_template.py  network_analysis_examples.md  network_analysis_examples.py  output_for_docstrings.py  py_to_md.py  reference.md  requirements.txt
docs/_static/: WEEtUHJvZC5BcmNHSVMgJFMxMC0yMA--.ica  custom.css  pandas.css
docs/examples/: geopandas_tools.md  index.rst  maps.md  maps.py  network_analysis_demo_template.md  network_analysis_demo_template.py  network_analysis_examples.md  network_analysis_examples.py  networkanalysis.md  py_to_md.py  secret_manager.md
docs/reference/: dapla.rst  index.rst  maps.rst  read_parquet_url.rst
docs/reference/geopandas_tools/: bounds.rst  buffer_dissolve_explode.rst  centerlines.rst  cleaning.rst  conversion.rst  duplicates.rst  general.rst  geocoding.rst  geometry_types.rst  index.rst  line_operations.rst  neighbors.rst  overlay.rst  point_operations.rst  polygon_operations.rst  polygons_as_rings.rst  sfilter.rst
docs/reference/io/: dapla.rst  index.rst  read_parquet_url.rst  write_municipality_data.rst
docs/reference/maps/: index.rst  legend.rst  maps.rst  thematicmap.rst
docs/reference/multiprocessing/: index.rst  mapper.rst  pool.rst
docs/reference/networkanalysis/: closing_network_holes.rst  cutting_lines.rst  directednetwork.rst  finding_isolated_networks.rst  index.rst  network.rst  networkanalysis.rst  networkanalysisrules.rst  nodes.rst  traveling_salesman.rst
docs/reference/parallel/: index.rst  parallel.rst
docs/reference/raster/: elevationraster.rst  index.rst  raster.rst
geopandas_util/: buffer_dissolve_explode.py  fra_geonorge.py  generelt.py  gis.py  grafclass.py  hjelpefunksjoner.py  id_stuff.py  lesing_lagring.py  make_graph.py  network.py  network_class.py  network_directed_undirected.py  network_functions.py  network_norway.py  networkanalysis.py  norway.py  od_cost_matrix.py  service_area.py  shortest_path.py  spesifikt.py
gis_utils/: __init__.py  buffer_dissolve_explode.py  dapla.py  directednetwork.py  distances.py  exceptions.py  geopandas_utils.py  make_graph.py  makegraph.py  maps.py  network.py  network_functions.py  network_norway.py  networkanalysis.py  od_cost_matrix.py  points.py  service_area.py  shortest_path.py
src/gis_utils/: __init__.py  _get_route.py  _od_cost_matrix.py  _points.py  _service_area.py  buffer_dissolve_explode.py  dapla.py  directednetwork.py  distances.py  exceptions.py  explore.py  from_geonorge.py  geopandas_utils.py  get_route.py  helpers.py  log.py  make_graph.py  makegraph.py  maps.py  network.py  network_functions.py  network_norway.py  networkanalysis.py  networkanalysisrules.py  od_cost_matrix.py  overlay.py  points.py  raster.py  read_parquet.py  service_area.py  shortest_path.py
src/sgis/: __init__.py  _points.py  buffer_dissolve_explode.py  conf.py  dapla.py  debug_config.py  directednetwork.py  exceptions.py  explore.py  geopandas_utils.py  helpers.py  maps.py  neighbors.py  neighbours.py  network.py  network_functions.py  network_norway.py  networkanalysis.py  networkanalysisrules.py  overlay.py  read_parquet.py
src/sgis/geopandas_tools/: __init__.py  bounds.py  buffer_dissolve_explode.py  centerlines.py  cleaning.py  conversion.py  duplicates.py  general.py  geocoding.py  geometry_types.py  line_operations.py  neighbors.py  overlay.py  point_operations.py  polygon_operations.py  polygons_as_rings.py  polygons_to_lines.py  runners.py  sfilter.py  snap_polygons.py  to_geodataframe.py  utils.py
src/sgis/io/: __init__.py  _is_dapla.py  dapla.py  dapla_functions.py  daplapath.py  opener.py  read_parquet.py  reader.py  write_municipality_data.py
src/sgis/maps/: create_secrets.py  examine.py  explore.py  explore_app.py  httpserver.py  legend.py  map.py  maps.py  norge_i_bilder.json  norge_i_bilder_wms.py  secrets.py  thematicmap.py  tilesources.py  wms.py
src/sgis/multiprocessing/: base.py  multiprocessingmapper.py  multiprocessingpool.py
src/sgis/networkanalysis/: _get_route.py  _od_cost_matrix.py  (+13 more)
tests/: __init__.py  benchmark_networkanalysis.py  clll.py  conftest.py  convert_examples.bat  count_function_calls.py  demo.ipynb  demo.md  demo.py  demo_ipynb.md  demo_ipynb.py  examples.ipynb  examples.md  examples.py  helpers.py  network_analysis_demo_template.ipynb  network_analysis_demo_template.py  network_analysis_examples.py  not_test_network_analysis.py  oslo.py  pandas_benchmarks.py  py_to_md.py  test.py  test2.py  test_bounds.py  test_buffdissexp.py  test_centerline.py  test_cleaning.py  test_close_holes.py  test_close_network_holes.py  test_cube.py  test_debug_config.py  test_directed_network.py  test_distances.py  test_duplicates.py  test_examine.py  test_explore.py  test_find_isolated.py  test_geodatacube.py  test_geometry_types.py  (+45 more)
tests/testdata/: disappearing.txt  dissolve_error.txt  dtm_10_two_bands.tif  example.parquet  gaps.parquet  hole_closing.txt  kommune_utenhav_1144_2023.parquet  kommune_utenhav_5435_2023.parquet  municipalities_2017.parquet  points_eidskog.parquet  polygon_snap.parquet  random_points.parquet  roads_difficult_to_dissolve.txt  roads_difficult_to_dissolve2.txt  roads_difficult_to_dissolve3.txt  roads_difficult_to_dissolve4_test.txt  roads_eidskog_2022.parquet  roads_oslo_2022.parquet  snap_problem_area_1144.parquet  snap_problem_area_1144.txt  test.tif
(+149 files in other folders)
