[tool.poetry]
name = "ssb-sgis"
version = "0.2.1"
description = "GIS functions used at Statistics Norway."
authors = ["Statistics Norway <ort@ssb.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sgis", from = "src"}]
homepage = "https://github.com/statisticsnorway/ssb-sgis"
repository = "https://github.com/statisticsnorway/ssb-sgis"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.urls]
Changelog = "https://github.com/statisticsnorway/ssb-sgis/releases"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
branca = ">=0.6.0"
folium = ">=0.14.0"
geopandas = ">=0.12.2"
igraph = ">=0.10.4"
mapclassify = ">=2.5.0"
matplotlib = ">=3.7.0"
networkx = ">=3.0"
numpy = ">=1.24.2"
pandas = ">=1.5.3"
pyarrow = ">=11.0.0"
requests = ">=2.28.2"
scikit-learn = ">=1.2.1"
shapely = ">=2.0.1"
xyzservices = ">=2023.2.0"
jenkspy = ">=0.3.2"
ipython = ">=8.13.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d", "jupyter"], version = ">=23.1.0"}
coverage = {extras = ["toml"], version = ">=7.2.1"}
darglint = ">=1.8.1"
deptry = ">=0.8.0"
flake8 = ">=6.0.0"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=23.2.13"
flake8-docstrings = ">=1.7.0"
flake8-rst-docstrings = ">=0.3.0"
furo = ">=2023.3.27"
isort = ">=5.12.0"
jupyterlab = ">=3.6.1"
jupytext = ">=1.14.5"
mypy = ">=1.0.1"
myst-parser = {version = ">=0.19.1"}
pep8-naming = ">=0.13.3"
pre-commit = ">=3.1.1"
pre-commit-hooks = ">=4.4.0"
pyogrio = ">=0.5.1"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
pyupgrade = ">=3.3.1"
sphinx = ">=6.1.3"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = ">=1.22"
xdoctest = {extras = ["colors"], version = ">=1.1.1"}


[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["sgis", "tests"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
lines_after_imports = 2
skip_gitignore = true
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector,-kernelspec"
cell_metadata_filter = "-all"

[tool.pytest.ini_options]
  pythonpath = [
   "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
